@@ -2,6 +2,10 @@
 
 	* Makefile: Add nethack-compat.el to rule all.
 	* nethack-compat.el (cl): Change cl to cl-lib.
+	* nethack-compat.el: Change all instances of case to cl-case.
+	* nethack-api.el: Likewise.
+	* nh-bot.el: Likewise, and change first to cl-first and find to
+	cl-find.
 
 2020-06-04  Benjamin Yang  <be11ng@protonmail.com>
 
